XWIKI-11538: Broken livetable columns display on mobile when containing custom/floated content

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/livetable.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/livetable.less
@@ -55,6 +55,7 @@
         // Behave like a "row"
         border: none;
         border-bottom: 1px solid #eee;
+        .clearfix();
         min-height: @input-height-base;
         position: relative;
         padding-left: 50%;
