XWIKI-11518: Infinite recursion displaying the title of the hourly watchlist job * Improve the #sheetTitle macro to support a common use case: displaying the sheet title only when the current document has an object of some type * Improve the title of the SchedulerJobSheet * Remove the usage of the deprecated EditModeClass on the SchedulerJobSheet * No need to include the sheet in the content of the SchedulerJobTemplate and the default WatchList jobs

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
@@ -2546,6 +2546,9 @@ $string##
 #if (!$condition && "$!condition" == '')##
 ## Undefined condition. Use the default condition.
 #set ($condition = $doc.getObject('XWiki.SheetDescriptorClass'))
+#elseif ($condition.getClass().getName() == 'java.lang.String')##
+## The condition is the name of an xclass. Display the sheet title if the current document doesn't have such an object.
+#set ($condition = !$doc.getObject($condition))
 #end##
 ##
 #if ($condition)##
