[misc] Use the improved webjars API (that removes the need to specify/hardcode the version).

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
@@ -210,7 +210,7 @@
 ##############################################
 
 ## Fix font path
-@icon-font-path:                      "$services.webjars.url('bootstrap/3.2.0/fonts')/";
+@icon-font-path:                      "$services.webjars.url('bootstrap', 'fonts')/";
 
 ##
 ## XWiki variables: LESS variables specific to XWiki
