--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
@@ -72,9 +72,9 @@ $xwiki.jsfx.use("flamingo$jsExtension", {'forceSkinAction' : true, 'language' : 
 <script type="text/javascript" src="$xwiki.getSkinFile("js/xwiki/markerScript.js", false)" defer="defer"></script>
 <!--[if lt IE 9]>
   ## HTML5Shiv enable the compatibility with IE8
-  <script src="$services.webjars.url('html5shiv/3.7.2/html5shiv.min.js')"></script>
+  <script src="$services.webjars.url('html5shiv', 'html5shiv.min.js')"></script>
   ## Respond.js implements the CSS 3 media queries for IE8
-  <script type="text/javascript" src="$services.webjars.url('respond/1.4.2/dest/respond.min.js')" defer="defer"></script>
+  <script type="text/javascript" src="$services.webjars.url('respond', 'dest/respond.min.js')" defer="defer"></script>
 <![endif]-->
 <script type="text/javascript">
 // <![CDATA[
@@ -97,8 +97,8 @@ $xwiki.jsfx.use("flamingo$jsExtension", {'forceSkinAction' : true, 'language' : 
 require.config({
 ## see: http://requirejs.org/docs/jquery.html#noconflictmap to see why this works.
   paths: {
-    'jquery': '#removeJsSuffix($services.webjars.url("jquery/1.11.1/jquery${jsExtension}"))',
-    'bootstrap': '#removeJsSuffix($services.webjars.url("bootstrap/3.2.0/js/bootstrap${jsExtension}"))',
+    'jquery': '#removeJsSuffix($services.webjars.url("jquery", "jquery${jsExtension}"))',
+    'bootstrap': '#removeJsSuffix($services.webjars.url("bootstrap", "js/bootstrap${jsExtension}"))',
     'xwiki-meta': '$stringtool.removeEnd($xwiki.getSkinFile('js/xwiki/meta.js'), '.js')'
   },
   shim: {
