XWIKI-11543: Integration of requirejs should be provided through a dependency on its WebJar * Remove the require.js file bundled with xwiki-platform-web * Modify javascript.vm (both in platform-web and flamingo-skin) to load RequireJS as webjar * Declare dependencies to RequireJS and JQuery webjars.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/javascript.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/javascript.vm
@@ -1,15 +1,19 @@
+## We handle the ability to disable the minification, by choosing the file extension to add to the script paths.
+#set ($jsExtension = '.min.js')
+#if ($request.minify == 'false')
+  #set ($jsExtension = '.js')
+#end
 ##
 ## JS Libraries.
 ##
-$xwiki.jsfx.use('js/amd/require.js', {'defer': false})##
+<script type="text/javascript" src="$services.webjars.url('requirejs', "require$jsExtension")"></script>
 ##
 $xwiki.jsfx.use('js/prototype/prototype.js', {'defer': false})##
 $xwiki.jsfx.use('js/scriptaculous/effects.js', true)##
-##
-## In order to make it easy to debug Javascript in browsers, allow the request parameter "minify=false" to be passed to
-## avoid using the minified versions of JS/CSS.
-##
-#if ("$!request.minify" == 'false')
+## xwiki-min.js and xwiki-min.css aggregate a couple of JavaScript and CSS files that are used on each page. In order to
+## help debugging we provide/bundle the individual files also and you can load them instead of the aggregated files by
+## passing 'minify=false' in the request query string.
+#if ($request.minify == 'false')
   $xwiki.jsfx.use('js/xwiki/xwiki.js', {'forceSkinAction': true, 'defer': false})##
   $xwiki.jsfx.use('js/xwiki/widgets/modalPopup.js', true)##
   $xwiki.ssfx.use('js/xwiki/widgets/modalPopup.css', {'forceSkinAction' : true, 'colorTheme' : $themeDoc})##
@@ -86,17 +90,11 @@ $xwiki.jsfx.use('js/scriptaculous/effects.js', true)##
 ## Start the requirejs config.
 ##
 require.config({
-  ## see: http://requirejs.org/docs/jquery.html#noconflictmap to see why this works.
-## We handle the ability to disable the minification, by choosing the file extension to add to the script paths.
-#if($request.minify == 'false')
-  #set($jsExtension = '.js')
-#else
-  #set($jsExtension = '.min.js')
-#end
   paths: {
     'jquery': '#removeJsSuffix($services.webjars.url("jquery", "jquery${jsExtension}"))',
     'xwiki-meta': '$stringtool.removeEnd($xwiki.getSkinFile('js/xwiki/meta.js'), '.js')'
   },
+  ## see: http://requirejs.org/docs/jquery.html#noconflictmap to see why this works.
   map: {
     '*': { 'jquery': 'jQueryNoConflict' },
     'jQueryNoConflict': { 'jquery': 'jquery' }
