--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
@@ -1,16 +1,19 @@
+## We handle the ability to disable the minification, by choosing the file extension to add to the script paths.
+#set ($jsExtension = '.min.js')
+#if ($request.minify == 'false')
+  #set ($jsExtension = '.js')
+#end
 ##
 ## JS Libraries.
 ##
-$xwiki.jsfx.use('js/amd/require.js', {'defer': false})##
+<script type="text/javascript" src="$services.webjars.url('requirejs', "require$jsExtension")"></script>
 ##
 $xwiki.jsfx.use('js/prototype/prototype.js', {'defer': false})##
 $xwiki.jsfx.use('js/scriptaculous/effects.js', true)##
-##
-## In order to make it easy to debug Javascript in browsers, allow the request parameter "minify=false" to be passed to
-## avoid using the minified versions of JS/CSS.
-##
+## xwiki-min.js and xwiki-min.css aggregate a couple of JavaScript and CSS files that are used on each page. In order to
+## help debugging we provide/bundle the individual files also and you can load them instead of the aggregated files by
+## passing 'minify=false' in the request query string.
 #if ($request.minify == 'false')
-  #set ($jsExtension = '.js')
   $xwiki.jsfx.use('js/xwiki/xwiki.js', {'forceSkinAction': true, 'defer': false})##
   $xwiki.jsfx.use('js/xwiki/widgets/modalPopup.js', true)##
   $xwiki.ssfx.use('js/xwiki/widgets/modalPopup.css', {'forceSkinAction' : true, 'colorTheme' : $themeDoc})##
@@ -26,7 +29,6 @@ $xwiki.jsfx.use('js/scriptaculous/effects.js', true)##
   $xwiki.jsfx.use('uicomponents/suggest/suggest.js', {'forceSkinAction' : true, 'language' : $xcontext.language})##
   $xwiki.ssfx.use('uicomponents/suggest/suggest.css', true)##
 #else
-  #set ($jsExtension = '.min.js')
   $xwiki.jsfx.use('js/xwiki/xwiki-min.js', {'forceSkinAction': true, 'defer': false, 'language': $xcontext.language})##
   $xwiki.ssfx.use('css/xwiki-min.css', {'forceSkinAction': true, 'colorTheme': $themeDoc, 'language': $xcontext.language})##
 #end
