XWIKI-11509 : Display ratings information in the Extension Manager UI - displayed the rating information (number of stars and total votes) for each extension in EM UI

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/extension/extension.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/extension/extension.css
@@ -50,6 +50,12 @@
   right: 0;
 }
 
+.extension-rating {
+  clear: right;
+  float: right;
+  margin-top: 10px;
+}
+
 .extension-status {
   font-size: 0.8em;
 }
