XWIKI-10708: Allow LESS syntax in SSX.
* Bug fix to use color theme variables in SSX.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
@@ -11,6 +11,8 @@
 ##############################################
 #set($doNotLoadColorThemeFromCSS = true)
 #template('colorThemeInit.vm')
+## Reset $doNotLoadColorThemeFromCSS for future calls (in SSX for examples)
+#set($doNotLoadColorThemeFromCSS = false)
 #if ("$!themeObj" != '')
   #initFromOldColorTheme()
 #else
