XWIKI-11381: Upgrade to Bootstrap 3.3.1.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/action-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/action-menus.less
@@ -16,6 +16,7 @@
     float: none;
     img {
       height: @navbar-height;
+      display: inline;
     }
   }
   @media (max-width: @screen-sm-min) {
