--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_macros.vm
@@ -12,7 +12,7 @@
 ###    Toplevel Menu
 ###
 #macro(xwikitopmenustart)
-  <div class="navbar navbar-default actionmenu">
+  <nav class="navbar navbar-default actionmenu" role="navigation">
     <div class="container-fluid">
       ## Brand and toggle get grouped for better mobile display
       <div class="navbar-header">
@@ -36,7 +36,7 @@
 #macro(xwikitopmenuend)
       </div>## /.navbar-collapse
     </div> ## / container-fluid
-  </div>
+  </nav>
 #end
 
 ###
