XWIKI-11541: Transform Mail features into an extension

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/displayer_email.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/displayer_email.vm
@@ -4,11 +4,18 @@
   <input type="text" id="$!id" name="$!id" value="$!escapetool.xml($value)" class="email"
     #if ($disabled)disabled="disabled"#end />
 #elseif ($type == 'view' || $type == 'rendered')
-#if ($xwiki.getXWikiPreferenceAsInt('obfuscateEmailAddresses', 0) == 1)
+  #set ($mailConfigDoc = $xwiki.getDocument('Mail.MailConfig'))
+  #set ($generalMailConfigObject = $mailConfigDoc.getObject('Mail.GeneralMailConfigClass'))
+  #set ($obfuscate = $generalMailConfigObject.getValue('obfuscate'))
+  #if ("$!obfuscate" == '')
+    ## We handle backward compatibility by also looking in the XWikiPreferences xobject
+    #set ($obfuscate = $xwiki.getXWikiPreferenceAsInt('obfuscateEmailAddresses', 0))
+  #end
+  #if ($obfuscate == 1)
 $!value.replaceAll('^(.).*@', '$1...@')##
-#elseif ($value !='')
+  #elseif ($value !='')
 <a href="mailto:$!value">$!value</a>##
-#end
+  #end
 #elseif ($type == 'hidden')
   #set ($id = $escapetool.xml("${prefix}${name}"))
   <input type="hidden" id="$!id" name="$!id" value="$!escapetool.xml($value)" />
