--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/shareinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/shareinline.vm
@@ -7,8 +7,9 @@
   #set ($sender = $xwiki.getUserName($xcontext.user, false))
   #set ($display = "$!{request.includeDocument}")
   #set ($serverName = $request.serverName)
-  #if ("$!{xwiki.getXWikiPreference('admin_email')}" != '')
-    #set ($sender = "$!{escapetool.q($sender)} <$!{xwiki.getXWikiPreference('admin_email')}>")
+  #set ($from = $services.mailsender.configuration.fromAddress)
+  #if ("$!from" != '')
+    #set ($sender = "$!{escapetool.q($sender)} <$from>")
   #else
     #if ($serverName.matches('\[.*\]|(\d{1,3}+\.){3}+\d{1,3}+'))
       #set ($sender = "$!{escapetool.q($sender)} <noreply@domain.net>")
