XWIKI-11576: Create a CSS class to make a responsive table.
(cherry picked from commit 716c0c90fd2b6692515e0316117803ef4c5a6e1d)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/style.less.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/style.less.vm
@@ -21,6 +21,7 @@
 @import "messages";
 @import "misc";
 @import "panels";
+@import "tables";
 @import "tree";
 @import "type";
 @import "vertical-menus";
