--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/historyinline.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/historyinline.vm
@@ -52,31 +52,34 @@ $xwiki.ssfx.use('uicomponents/pagination/pagination.css', true)##
       ## CSRF prevention
       <input type="hidden" name="form_token" value="$!{services.csrf.getToken()}" />
       <input type="hidden" name="language" value="$!xcontext.language" />
-      <table class="table table-striped table-hover" summary="$services.localization.render('core.viewers.history.summary', [$escapetool.xml($doc.displayTitle), $versions.get($mathtool.sub($versions.size(), 1)), $versions.get(0)])">
+      <table class="table table-striped table-hover responsive-table" summary="$services.localization.render('core.viewers.history.summary', [$escapetool.xml($doc.displayTitle), $versions.get($mathtool.sub($versions.size(), 1)), $versions.get(0)])">
 ## Print the table header
-        <tr>
-        #if ($totalVersions > 1)
-          <th scope="col">$services.localization.render('core.viewers.history.from')</th>
-          <th scope="col">$services.localization.render('core.viewers.history.to')</th>
-        #end
-          <th scope="col">$services.localization.render('core.viewers.history.version')</th>
-          <th scope="col">$services.localization.render('core.viewers.history.author')</th>
-          <th scope="col">$services.localization.render('core.viewers.history.date')</th>
-## Might be disabled in certain wikis.
-        #if($xwiki.hasEditComment())
-          <th scope="col">$services.localization.render('core.viewers.history.comment')</th>
-        #end
-## Editors see the Revert button.
-        #if($hasEdit && !$hasAdmin)
-          <th scope="col"></th>
-## Admins see the Revert and Delete buttons.
-        #elseif($hasAdmin)
-          <th scope="col" colspan="2"></th>
-        #end
-        </tr>
+        <thead>
+          <tr>
+          #if ($totalVersions > 1)
+            <th scope="col">$services.localization.render('core.viewers.history.from')</th>
+            <th scope="col">$services.localization.render('core.viewers.history.to')</th>
+          #end
+            <th scope="col">$services.localization.render('core.viewers.history.version')</th>
+            <th scope="col">$services.localization.render('core.viewers.history.author')</th>
+            <th scope="col">$services.localization.render('core.viewers.history.date')</th>
+  ## Might be disabled in certain wikis.
+          #if($xwiki.hasEditComment())
+            <th scope="col">$services.localization.render('core.viewers.history.comment')</th>
+          #end
+  ## Editors see the Revert button.
+          #if($hasEdit && !$hasAdmin)
+            <th scope="col"></th>
+  ## Admins see the Revert and Delete buttons.
+          #elseif($hasAdmin)
+            <th scope="col" colspan="2"></th>
+          #end
+          </tr>
+        </thead>
 ##
 ## Display, loop over the extracted revisions and print them in the table.
 ##
+  <tbody>
   #foreach ($version in $versions)
     #set ($revinfo = $tdoc.getRevisionInfo($version))
     #if ($tdoc.getRCSVersion() == $version)
@@ -85,27 +88,28 @@ $xwiki.ssfx.use('uicomponents/pagination/pagination.css', true)##
        <tr class="#if($velocityCount % 2 == 0) even #else odd #end">
     #end
     #if ($totalVersions > 1)
-      <td><input type="radio" name="rev1" value="$version" #if ($velocityCount==2) checked="checked" #end/></td>
-      <td><input type="radio" name="rev2" value="$version" #if ($velocityCount==1) checked="checked" #end/></td>
+      <td data-title="$escapetool.xml($services.localization.render('core.viewers.history.from'))"><input type="radio" name="rev1" value="$version" #if ($velocityCount==2) checked="checked" #end/></td>
+      <td data-title="$escapetool.xml($services.localization.render('core.viewers.history.to'))"><input type="radio" name="rev2" value="$version" #if ($velocityCount==1) checked="checked" #end/></td>
     #end
-    <td><a href="$tdoc.getURL('viewrev',"rev=$version")">$version</a></td>
-    <td>$xwiki.getUserName($revinfo.author)</td>
-    <td>$xwiki.formatDate($revinfo.date)</td>
+    <td data-title="$escapetool.xml($services.localization.render('core.viewers.history.version'))"><a href="$tdoc.getURL('viewrev',"rev=$version")">$version</a></td>
+    <td data-title="$escapetool.xml($services.localization.render('core.viewers.history.author'))">$xwiki.getUserName($revinfo.author)</td>
+    <td data-title="$escapetool.xml($services.localization.render('core.viewers.history.date'))">$xwiki.formatDate($revinfo.date)</td>
     #if ($xwiki.hasEditComment())
-      <td>$!{escapetool.xml($revinfo.comment)}</td>
+      <td data-title="$escapetool.xml($services.localization.render('core.viewers.history.comment'))">$!{escapetool.xml($revinfo.comment)}</td>
     #end
     #if ($hasEdit || $hasAdmin)
       #if ($tdoc.getRCSVersion()==$version)
-        <td><span class="currentversionlabel">$services.localization.render('core.viewers.history.currentVersion')</span></td>
+        <td data-title="$escapetool.xml($services.localization.render('core.viewers.history.rollback'))"><span class="currentversionlabel">$services.localization.render('core.viewers.history.currentVersion')</span></td>
       #else
-        <td class="xwikibuttonlink"><a href="$tdoc.getURL('rollback', "form_token=$!{services.csrf.getToken()}&amp;rev=$version$lang")" onclick="if (confirm('$services.localization.render('core.viewers.history.confirmRollback', [$version])')){this.href += '&amp;confirm=1'; return true;} return false;">$services.localization.render('core.viewers.history.rollback')</a></td>
+        <td class="xwikibuttonlink" data-title="$escapetool.xml($services.localization.render('core.viewers.history.rollback'))"><a href="$tdoc.getURL('rollback', "form_token=$!{services.csrf.getToken()}&amp;rev=$version$lang")" onclick="if (confirm('$services.localization.render('core.viewers.history.confirmRollback', [$version])')){this.href += '&amp;confirm=1'; return true;} return false;">$services.localization.render('core.viewers.history.rollback')</a></td>
       #end
     #end
     #if ($hasAdmin)
-      <td class="xwikibuttonlink"><a href="$tdoc.getURL('deleteversions',"form_token=$!{services.csrf.getToken()}&amp;rev=$version$lang")" onclick="if (confirm('$services.localization.render('core.viewers.history.confirmDeleteSingle', [$version])')){this.href += '&amp;confirm=1'; return true;} return false;">$services.localization.render('core.viewers.history.deleteSingle')</a></td>
+      <td class="xwikibuttonlink" data-title="$escapetool.xml($services.localization.render('core.viewers.history.deleteSingle'))"><a href="$tdoc.getURL('deleteversions',"form_token=$!{services.csrf.getToken()}&amp;rev=$version$lang")" onclick="if (confirm('$services.localization.render('core.viewers.history.confirmDeleteSingle', [$version])')){this.href += '&amp;confirm=1'; return true;} return false;">$services.localization.render('core.viewers.history.deleteSingle')</a></td>
     #end
     </tr>
   #end ## foreach
+  </tbody>
 ##
 ## Footer, print some more HTML.
 ##
