XWIKI-11576: Create a CSS class to make a responsive table.
* Add @since comment.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/tables.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/tables.less
@@ -22,6 +22,8 @@
 //     </tr>
 //   </thead>
 // </table>
+//
+// @since 6.4M2
 .responsive-table {
   @media only screen and (max-width: @screen-xs-max) {
     thead, tbody, th, td, tr {
