XWIKI-11576: Create a CSS class to make a responsive table.
* Fix comment.

(cherry picked from commit 73b78a48338dc73f9d56219848eea944d81c8332)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/tables.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/tables.less
@@ -20,7 +20,7 @@
 //       <td data-title="Name">John Smith</td>
 //       <td data-title="Age">42</td>
 //     </tr>
-//   </thead>
+//   </tbody>
 // </table>
 //
 // @since 6.4M2
