XWIKI-10789: Add a new BCC field for the Email feature * Documentation in xwiki.properties

--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
@@ -706,4 +706,8 @@ rendering.transformations = $xwikiRenderingTransformations
 #-# The default is:
 # mail.sender.scriptServiceCheckerHint = programmingrights
 
+#-# [Since 6.4M2]
+#-# optional default email addresses to add to the BCC mail header when sending email.
+# mail.sender.bcc = john@doe.com,mary@doe.com
+
 $!xwikiPropertiesAdditionalProperties
