--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/admin.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/admin.less
@@ -6,7 +6,9 @@
   .make-xs-column(12);
   .make-sm-column(3);
   
-  max-width: 300px;
+  @media (min-width: @screen-lg-min) {
+    max-width: 300px;
+  }
 }
 
 .admin-category, #admin-page-content {
