XWIKI-11601: Very long no-space text (like URL) in comment overflow on small screen.
(cherry picked from commit b6e49d2dfbb02a07123cba71308f29d8777e0867)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
@@ -55,6 +55,12 @@
   width: 100%;
 }
 
+// Comments ==================================================================
+
+.commentcontent {
+  overflow-x: scroll;
+}
+
 // Messages ===================================================================
 
 /* Used by: Toc, Box Macros */
