XWIKI-11507 : Integrate the ratings system from xwiki-contrib * refactoring

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
@@ -5,6 +5,7 @@
 #set ($discard = $xwiki.jsfx.use('uicomponents/widgets/buttonGroup.js'))
 
 #set($discard = $services.template.execute('job_macros.vm'))
+#set($discard = $services.template.execute('rating_macros.vm'))
 
 ## Various configuration of extension.vm behavior
 ## * skipCheckRight: skip right validation when executing a action (install plan, install, etc.)
