XWIKI-11509 : Display ratings information in the Extension Manager UI * improve performances

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
@@ -165,7 +165,7 @@
 #end
 
 #macro (displayExtensionRating $extension)
-  #set ($rating = $services.extension.rating.getRating($extension.id))
+  #set ($rating = $extension.getRating())
   #if ($rating != $NULL)
     #set($id = $xwiki.getUniquePageName("string").replaceAll("[0-9]*", "").toLowerCase())
     <div class="extension-rating">
