XWIKI-11600: Very long values overflow out of responsive livetable on small screen.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/tables.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/tables.less
@@ -64,11 +64,13 @@
   border: none;
   border-bottom: 1px solid @table-border-color;
   min-height: @input-height-base;
+  overflow: hidden;
   position: relative;
   padding-left: 50%;
   padding-top: @table-cell-padding;
   top: 0;
   text-align:left;
+  text-overflow: ellipsis;
   white-space: normal;
   
   // Fake header: display a fake cell to display the title of the current cell
