XWIKI-10806: $docextralinks doesn't display number of comments or attachment (and probably annotation) in the flamingo "More Actions" menu.
(cherry picked from commit 6809eff4ba7af93b7cec39babf4c6c77ae29a88d)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/shortcuts.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/shortcuts.vm
@@ -43,6 +43,9 @@
   #if ($docextralink.size()>3)
     #set ($glyphIcon = $docextralink.get(3))
   #end
+  #if ($extraCount > 0)
+    #set ($extraText = "$extraText ($extraCount)")
+  #end
   #submenuitem($doc.getURL('view', "viewer=$!{escapetool.url(${extraAnchor})}"), ${escapetool.xml(${extraText})}, '', '', $glyphIcon)
 #end
 #if($xcontext.action == 'view' && $viewer != 'content')
