XWIKI-11613: A click to Document Index should not change the current space.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_space.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_space.vm
@@ -31,7 +31,7 @@
     ## DOCUMENT INDEX
     #if ($xwiki.exists('Main.SpaceIndex'))
       #submenuseparator()
-      #set ($spaceIndexUrl = $xwiki.getURL('Main.SpaceIndex', 'view',"space=${escapetool.url($doc.space)}"))
+      #set ($spaceIndexUrl = $xwiki.getURL($services.model.createDocumentReference('', $doc.space, 'WebHome'), 'view','sheet=Main.SpaceIndex'))
       #submenuitem($spaceIndexUrl $services.localization.render('core.menu.space.documentindex') 'tmSpaceDocumentIndex' '' 'book')
       #set ($hasPreviousMenuSection = true)
     #end
