XWIKI-11274: Display "Create Wiki" in line in the "Wiki Creation Right" livetable.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/usersandgroups/usersandgroups.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/usersandgroups/usersandgroups.css
@@ -25,8 +25,10 @@
 }
 
 .rights {
+  text-align: center;
   padding-left: 0px !important;
   padding-top: 4px;
+  white-space: nowrap;
   width: 9%;
 }
 .rights th, .rights td {
